<resources>
    <string name="app_name">drraanka</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_background">Login Background</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_description">Please login to your account</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="register_now">REGISTER NOW</string>
    <string name="login">LOGIN</string>
    <string name="header_logo">Header Logo</string>
    <string name="profile_icon">PROFILE ICON</string>
    <string name="image">IMAGE</string>
    <string name="silver_chit">Silver Chit</string>
    <string name="product_catalog">Product Catalog</string>
    <string name="live_rates">Live Rates</string>
    <string name="gold_rate">Gold Rate</string>
    <string name="colon">:</string>
    <string name="dash">-</string>
    <string name="store_locator">Store Locator</string>
    <string name="click_here"><![CDATA[Click here >>>]]></string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="carousel">CAROUSEL</string>
    <string name="silver_rate">Silver Rate</string>
    <string name="location">LOCATION</string>
    <string name="back">BACK</string>
    <string name="my_plans">My Plans</string>
    <string name="my_silver_scheme_s">My Silver Scheme\'s</string>
    <string name="scheme_date">Scheme Date :</string>
    <string name="pending">Pending :</string>
    <string name="selection">SELECTION</string>
    <string name="add_scheme">ADD_SCHEME</string>
    <string name="scheme_details">Scheme Details</string>
    <string name="done">Done</string>
    <string name="contribution">Contribution</string>
    <string name="rs">₹</string>
    <string name="minimum_contribution">Minimum Contribution</string>
    <string name="scheme_tenure">Scheme Tenure</string>
    <string name="instruction">(Product value is gained after 12months respectively)</string>
    <string name="d_r_raanka_contribution">D.R.Raanka Contribution</string>
    <string name="products_value">Products Value</string>
    <string name="select_scheme">Select Scheme</string>
    <string name="terms_and_conditions_apply">Terms and Conditions Apply</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="mobile">Mobile</string>
    <string name="enter_your_mobile_number">Enter your Mobile number</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="address">Address</string>
    <string name="enter_your_aadhaar_number">Enter your Aadhaar Number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="enquiry">Enquiry</string>
</resources>