<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/home"
        android:title="@string/home"/>

    <item
        android:id="@+id/silverChitFragment"
        android:icon="@drawable/silver_chit_btm"
        android:title="@string/silver_chit"/>

    <item
        android:id="@+id/productCatalogFragment"
        android:icon="@drawable/product_catalog_btm"
        android:title="@string/product_catalog"/>

    <item
        android:id="@+id/liveRatesFragment"
        android:icon="@drawable/live_rates_btm"
        android:title="@string/live_rates"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/settings"
        android:title="@string/profile"/>


</menu>