<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_bg"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_bg_img"
        android:scaleType="fitXY"
        android:contentDescription="@string/login_background" />

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scrollbars="none">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <ImageView
               android:id="@+id/ivHeaderLogo"
               android:layout_width="@dimen/_0dp"
               android:layout_height="wrap_content"
               android:src="@drawable/logo_white"
               app:tint="@color/white"
               android:padding="@dimen/_5dp"
               android:layout_marginHorizontal="@dimen/_40dp"
               android:layout_marginTop="40dp"
               android:layout_marginBottom="@dimen/_50dp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toTopOf="@id/tvWelcomeBack"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:contentDescription="@string/header_logo"/>

           <TextView
               android:id="@+id/tvWelcomeBack"
               android:layout_width="@dimen/_0dp"
               android:layout_height="wrap_content"
               style="@style/text_white_bold_33"
               android:text="@string/welcome_back"
               android:layout_marginTop="@dimen/_50dp"
               android:layout_marginBottom="@dimen/_2dp"
               android:layout_marginHorizontal="@dimen/_25dp"
               app:layout_constraintTop_toBottomOf="@id/ivHeaderLogo"
               app:layout_constraintBottom_toTopOf="@id/tvLoginDescription"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"/>

           <TextView
               android:id="@+id/tvLoginDescription"
               android:layout_width="@dimen/_0dp"
               android:layout_height="wrap_content"
               style="@style/text_white_regular_25"
               android:text="@string/login_description"
               android:layout_marginTop="@dimen/_2dp"
               app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack"
               app:layout_constraintBottom_toTopOf="@id/etMobileNumber"
               app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
               app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack"/>

           <EditText
               android:id="@+id/etMobileNumber"
               android:layout_width="@dimen/_0dp"
               android:layout_height="wrap_content"
               style="@style/edit_text_login_bold_17"
               android:hint="@string/mobile_number"
               android:importantForAutofill="no"
               android:inputType="number"
               android:layout_marginTop="@dimen/_25dp"
               android:layout_marginBottom="@dimen/_10dp"
               app:layout_constraintTop_toBottomOf="@id/tvLoginDescription"
               app:layout_constraintBottom_toTopOf="@id/etPassword"
               app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
               app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack" />

           <EditText
               android:id="@+id/etPassword"
               android:layout_width="@dimen/_0dp"
               android:layout_height="wrap_content"
               style="@style/edit_text_login_bold_17"
               android:hint="@string/password"
               android:inputType="textPassword"
               android:importantForAutofill="no"
               android:layout_marginTop="@dimen/_10dp"
               android:layout_marginBottom="@dimen/_20dp"
               app:layout_constraintTop_toBottomOf="@id/etMobileNumber"
               app:layout_constraintBottom_toTopOf="@id/btnLogin"
               app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
               app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack" />

           <Button
               android:id="@+id/btnLogin"
               android:layout_width="@dimen/_0dp"
               android:layout_height="wrap_content"
               android:text="@string/login"
               app:backgroundTint="@null"
               style="@style/text_login_button_bold_20"
               android:layout_marginTop="@dimen/_20dp"
               android:layout_marginBottom="@dimen/_10dp"
               app:layout_constraintTop_toBottomOf="@id/etPassword"
               app:layout_constraintBottom_toTopOf="@id/btnRegisterNow"
               app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
               app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack"/>

           <Button
               android:id="@+id/btnRegisterNow"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               style="@style/text_register_button_bold_23"
               app:backgroundTint="@null"
               android:text="@string/register_now"
               android:gravity="center"
               android:layout_marginTop="@dimen/_15dp"
               android:layout_marginBottom="65dp"
               app:layout_constraintTop_toBottomOf="@id/btnLogin"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toStartOf="@id/tvWelcomeBack"
               app:layout_constraintEnd_toEndOf="@id/tvWelcomeBack"/>

       </androidx.constraintlayout.widget.ConstraintLayout>

   </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/curved_layout_white"
        android:padding="@dimen/_20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/progress_bar_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/text_blue2"
            app:layout_constraintStart_toStartOf="parent"
            style="?android:attr/progressBarStyleLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>