<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_bg"
    tools:context=".ui.registration.RegistrationFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_bg_img"
        android:scaleType="fitXY"
        android:contentDescription="@string/login_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clActionBar"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scrollViewRegistration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/back"
            android:padding="@dimen/_5dp"
            app:layout_constraintTop_toTopOf="@id/tvHeadingText"
            app:layout_constraintBottom_toBottomOf="@id/tvHeadingText"
            app:layout_constraintStart_toStartOf="@id/tvHeadingText"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/tvHeadingText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            style="@style/text_register_button_bold_23"
            android:text="@string/registration"
            android:layout_margin="@dimen/_13dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollViewRegistration"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintTop_toBottomOf="@id/clActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_12dp"
                app:cardElevation="@dimen/_5dp"
                android:layout_marginTop="@dimen/_5dp"
                android:layout_marginBottom="@dimen/_60dp"
                android:layout_marginHorizontal="@dimen/_13dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvRegistrationName"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_blue2_bold_20"
                        android:text="@string/name"
                        android:layout_marginTop="@dimen/_20dp"
                        android:layout_marginBottom="@dimen/_5dp"
                        android:layout_marginHorizontal="@dimen/_20dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/etvRegistrationName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <EditText
                        android:id="@+id/etvRegistrationName"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_black_regular_20"
                        android:inputType="text"
                        android:hint="@string/enter_your_name"
                        android:layout_marginTop="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/tvRegistrationName"
                        app:layout_constraintBottom_toTopOf="@id/tvRegistrationMobile"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/tvRegistrationMobile"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_blue2_bold_20"
                        android:text="@string/mobile"
                        android:layout_marginTop="@dimen/_5dp"
                        android:layout_marginBottom="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/etvRegistrationName"
                        app:layout_constraintBottom_toTopOf="@id/etvRegistrationMobile"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"/>

                    <EditText
                        android:id="@+id/etvRegistrationMobile"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_black_regular_20"
                        android:inputType="number"
                        android:hint="@string/enter_your_mobile_number"
                        android:layout_marginTop="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/tvRegistrationMobile"
                        app:layout_constraintBottom_toTopOf="@id/tvRegistrationPassword"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/tvRegistrationPassword"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_blue2_bold_20"
                        android:text="@string/password"
                        android:layout_marginTop="@dimen/_5dp"
                        android:layout_marginBottom="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/etvRegistrationMobile"
                        app:layout_constraintBottom_toTopOf="@id/etvRegistrationPassword"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"/>

                    <EditText
                        android:id="@+id/etvRegistrationPassword"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_black_regular_20"
                        android:inputType="textPassword"
                        android:hint="@string/enter_your_password"
                        android:layout_marginTop="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/tvRegistrationPassword"
                        app:layout_constraintBottom_toTopOf="@id/tvRegistrationMail"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/tvRegistrationMail"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_blue2_bold_20"
                        android:text="@string/email"
                        android:layout_marginTop="@dimen/_5dp"
                        android:layout_marginBottom="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/etvRegistrationPassword"
                        app:layout_constraintBottom_toTopOf="@id/etvRegistrationMail"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"/>

                    <EditText
                        android:id="@+id/etvRegistrationMail"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_black_regular_20"
                        android:inputType="textEmailAddress"
                        android:hint="@string/enter_your_email"
                        android:layout_marginTop="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/tvRegistrationMail"
                        app:layout_constraintBottom_toTopOf="@id/tvRegistrationAddress"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/tvRegistrationAddress"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_blue2_bold_20"
                        android:text="@string/address"
                        android:layout_marginTop="@dimen/_5dp"
                        android:layout_marginBottom="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/etvRegistrationMail"
                        app:layout_constraintBottom_toTopOf="@id/etvRegistrationAddress"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"/>

                    <EditText
                        android:id="@+id/etvRegistrationAddress"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_black_regular_20"
                        android:inputType="textMultiLine"
                        android:gravity="start"
                        android:lines="3"
                        android:hint="@string/address"
                        android:layout_marginTop="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/tvRegistrationAddress"
                        app:layout_constraintBottom_toTopOf="@id/tvRegistrationAadhar"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/tvRegistrationAadhar"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_blue2_bold_20"
                        android:text="@string/aadhar_number"
                        android:layout_marginTop="@dimen/_5dp"
                        android:layout_marginBottom="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/etvRegistrationAddress"
                        app:layout_constraintBottom_toTopOf="@id/etvRegistrationAadhar"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"/>

                    <EditText
                        android:id="@+id/etvRegistrationAadhar"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="wrap_content"
                        style="@style/text_black_regular_20"
                        android:inputType="numberSigned"
                        android:maxLength="12"
                        android:hint="@string/enter_your_aadhaar_number"
                        android:layout_marginTop="@dimen/_5dp"
                        app:layout_constraintTop_toBottomOf="@id/tvRegistrationAadhar"
                        app:layout_constraintBottom_toTopOf="@id/btnRegistrationCreate"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"
                        android:importantForAutofill="no" />

                    <Button
                        android:id="@+id/btnRegistrationCreate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create"
                        android:layout_marginTop="@dimen/_10dp"
                        android:layout_marginBottom="@dimen/_60dp"
                        app:backgroundTint="@null"
                        style="@style/text_create_button_bold_20"
                        app:layout_constraintTop_toBottomOf="@id/etvRegistrationAadhar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/tvRegistrationName"
                        app:layout_constraintEnd_toEndOf="@id/tvRegistrationName"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>