<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/mcViewSilverChit"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_12dp"
    app:cardElevation="@dimen/_12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSchemeName"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            style="@style/text_blue_regular_18"
            android:text="@string/dash"
            android:layout_marginHorizontal="@dimen/_13dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvSchemeDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivSelection"/>

        <TextView
            android:id="@+id/tvSchemeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_blue_regular_12"
            android:text="@string/scheme_date"
            android:layout_marginVertical="@dimen/_1dp"
            app:layout_constraintTop_toBottomOf="@id/tvSchemeName"
            app:layout_constraintBottom_toTopOf="@id/tvSchemePending"
            app:layout_constraintStart_toStartOf="@id/tvSchemeName"
            app:layout_constraintEnd_toStartOf="@id/tvSchemeDateValue"/>

        <TextView
            android:id="@+id/tvSchemeDateValue"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            style="@style/text_blue_regular_12"
            android:text="@string/dash"
            app:layout_constraintTop_toTopOf="@id/tvSchemeDate"
            app:layout_constraintBottom_toBottomOf="@id/tvSchemeDate"
            app:layout_constraintStart_toEndOf="@id/tvSchemeDate"
            app:layout_constraintEnd_toEndOf="@id/tvSchemeName"/>

        <TextView
            android:id="@+id/tvSchemePending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_blue_regular_12"
            android:text="@string/pending"
            android:layout_marginTop="@dimen/_1dp"
            android:layout_marginBottom="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/tvSchemeDate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvSchemeName"
            app:layout_constraintEnd_toStartOf="@id/tvSchemePendingValue"/>

        <TextView
            android:id="@+id/tvSchemePendingValue"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            style="@style/text_blue_regular_12"
            android:text="@string/dash"
            app:layout_constraintTop_toTopOf="@id/tvSchemePending"
            app:layout_constraintBottom_toBottomOf="@id/tvSchemePending"
            app:layout_constraintStart_toEndOf="@id/tvSchemePending"
            app:layout_constraintEnd_toEndOf="@id/tvSchemeName"/>

        <ImageView
            android:id="@+id/ivSelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next"
            android:rotation="180"
            android:layout_marginHorizontal="@dimen/_13dp"
            app:layout_constraintTop_toTopOf="@id/tvSchemeName"
            app:layout_constraintBottom_toBottomOf="@id/tvSchemePending"
            app:layout_constraintStart_toEndOf="@id/tvSchemeName"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/selection" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>