<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_bg_img"
        android:scaleType="fitXY"
        android:contentDescription="@string/login_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clActionBar"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav_host_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/back"
            android:padding="@dimen/_5dp"
            android:layout_marginStart="@dimen/_13dp"
            app:layout_constraintTop_toTopOf="@id/tvHeadingText"
            app:layout_constraintBottom_toBottomOf="@id/tvHeadingText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvHeadingText"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/tvHeadingText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            style="@style/text_register_button_bold_23"
            android:text="@string/dash"
            android:layout_margin="@dimen/_12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintEnd_toStartOf="@id/ivProfileIcon"/>

        <ImageView
            android:id="@+id/ivProfileIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            android:layout_marginEnd="@dimen/_13dp"
            app:layout_constraintTop_toTopOf="@id/tvHeadingText"
            app:layout_constraintBottom_toBottomOf="@id/tvHeadingText"
            app:layout_constraintStart_toEndOf="@id/tvHeadingText"
            app:layout_constraintEnd_toStartOf="@id/ivLogOut"
            android:contentDescription="@string/profile_icon" />


        <ImageView
            android:id="@+id/ivLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_logout_24"
            android:layout_marginEnd="@dimen/_13dp"
            app:layout_constraintTop_toTopOf="@id/tvHeadingText"
            app:layout_constraintBottom_toBottomOf="@id/tvHeadingText"
            app:layout_constraintStart_toEndOf="@id/ivProfileIcon"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="Log Out Button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        app:navGraph="@navigation/navigation_graph"
        app:defaultNavHost= "true"
        app:layout_constraintBottom_toTopOf="@id/btmNavigationDashboard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clActionBar" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btmNavigationDashboard"
        android:layout_width="@dimen/_0dp"
        android:layout_height="?actionBarSize"
        android:visibility="gone"
        app:menu="@menu/navigation_menu"
        app:itemIconTint="@color/icon_selection_colors"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintTop_toBottomOf="@id/nav_host_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>